commit fixed white space on screen and adjusted text

--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -11,7 +11,7 @@
 }
 
 .bottom-section {
-  height: 100vh;
+  /*height: 100vh;*/
   width: 100%;
 }
 
