--- a/src/components/SongRecommendationsPage.css
+++ b/src/components/SongRecommendationsPage.css
@@ -1,6 +1,3 @@
-.filler-text {
-  height: 100%;
-}
 
 .user-metadata {
   display: flex;
@@ -37,7 +34,6 @@
 
 .songs-list {
   padding-top: 30px;
-  height: 100%;
 }
 
 .regenerate-songs-button {
